[gd_scene load_steps=50 format=4 uid="uid://clycduodbh3yu"]

[ext_resource type="Script" path="res://scripts/get_map_coord.gd" id="1_6lx40"]
[ext_resource type="TileSet" uid="uid://b843a1habq0g5" path="res://textures/area3.tres" id="2_fi2or"]
[ext_resource type="Script" path="res://scripts/player.gd" id="3_axulg"]
[ext_resource type="AudioStream" uid="uid://dbboemw23xegk" path="res://sounds/Level Victory.mp3" id="3_fwmjb"]
[ext_resource type="Texture2D" uid="uid://b21y2f46l3cnu" path="res://textures/loose sprites.png" id="4_elkbb"]
[ext_resource type="AudioStream" uid="uid://bwnipnppbmyms" path="res://sounds/Door.wav" id="4_gtjo3"]
[ext_resource type="AudioStream" uid="uid://dri20jeo8gai8" path="res://sounds/Teleporter.wav" id="5_8n3if"]
[ext_resource type="Texture2D" uid="uid://cbf8waqy0cqu7" path="res://textures/iso_tileset.png" id="5_sptne"]
[ext_resource type="Script" path="res://scripts/level_score.gd" id="6_5sj0c"]
[ext_resource type="Script" path="res://scenes/levels/total_score.gd" id="7_60pqm"]
[ext_resource type="Texture2D" uid="uid://cr2ofpefw4esk" path="res://textures/area_2_tileset.png" id="8_07sc2"]
[ext_resource type="AudioStream" uid="uid://bnh6c8padev3p" path="res://sounds/Walk.wav" id="9_2ifb8"]
[ext_resource type="AudioStream" uid="uid://vdqbu3me0eqx" path="res://sounds/Lost Life.wav" id="10_kblny"]
[ext_resource type="AudioStream" uid="uid://jq6sskna84md" path="res://sounds/8-Bit-Adventure.mp3" id="13_cprq6"]
[ext_resource type="Script" path="res://scenes/levels/total_lives.gd" id="14_86hs4"]
[ext_resource type="AudioStream" uid="uid://dayr6beq5ix61" path="res://sounds/8-Bit-Determination.mp3" id="14_n8ujw"]
[ext_resource type="Script" path="res://scripts/chaser_simpler.gd" id="14_y8b40"]
[ext_resource type="Texture2D" uid="uid://b4j2lqtl2vb0n" path="res://textures/Zombie_purple.png" id="15_3dxf7"]
[ext_resource type="Texture2D" uid="uid://chnxf0ujd0kvq" path="res://textures/area_3_tileset.png" id="15_ct783"]
[ext_resource type="AudioStream" uid="uid://bm77iinsahqcu" path="res://sounds/8-Bit-Groove.mp3" id="15_lw1fo"]
[ext_resource type="AudioStream" uid="uid://nse8551ks35" path="res://sounds/8-Bit-Menu.mp3" id="16_ks0hl"]
[ext_resource type="AudioStream" uid="uid://bg736hv8a684p" path="res://sounds/8-Bit-Mountains-Ahead.mp3" id="17_07qev"]
[ext_resource type="AudioStream" uid="uid://beyth5y08ieft" path="res://sounds/8-Bit-Shadows.mp3" id="18_72muw"]
[ext_resource type="AudioStream" uid="uid://dat8sjbvtsnrv" path="res://sounds/8-Bit-Success.mp3" id="19_57bxo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vw4w1"]
atlas = ExtResource("5_sptne")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yygo3"]
atlas = ExtResource("8_07sc2")
region = Rect2(224, 0, 32, 32)

[sub_resource type="Animation" id="Animation_fjavp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_82nnu"]
resource_name = "walk down"
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(2, 0)]
}

[sub_resource type="Animation" id="Animation_cceoa"]
resource_name = "walk downleft"
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(3, 1), Vector2i(2, 1)]
}

[sub_resource type="Animation" id="Animation_ucsvk"]
resource_name = "walk downright"
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(3, 7), Vector2i(2, 7)]
}

[sub_resource type="Animation" id="Animation_qegsm"]
resource_name = "walk left"
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(3, 2), Vector2i(2, 2)]
}

[sub_resource type="Animation" id="Animation_ex1b8"]
resource_name = "walk right"
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(3, 6), Vector2i(2, 6)]
}

[sub_resource type="Animation" id="Animation_vaehf"]
resource_name = "walk up"
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(3, 4), Vector2i(2, 4)]
}

[sub_resource type="Animation" id="Animation_cjcad"]
resource_name = "walk upleft"
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(3, 3), Vector2i(2, 3)]
}

[sub_resource type="Animation" id="Animation_486o4"]
resource_name = "walk upright"
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(3, 5), Vector2i(2, 5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2h7bs"]
_data = {
"RESET": SubResource("Animation_fjavp"),
"walk down": SubResource("Animation_82nnu"),
"walk downleft": SubResource("Animation_cceoa"),
"walk downright": SubResource("Animation_ucsvk"),
"walk left": SubResource("Animation_qegsm"),
"walk right": SubResource("Animation_ex1b8"),
"walk up": SubResource("Animation_vaehf"),
"walk upleft": SubResource("Animation_cjcad"),
"walk upright": SubResource("Animation_486o4")
}

[sub_resource type="LabelSettings" id="LabelSettings_orw81"]
font_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_bngyr"]
font_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_0dkue"]
font_size = 8

[sub_resource type="AtlasTexture" id="AtlasTexture_hngt1"]
atlas = ExtResource("15_ct783")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5atr5"]
atlas = ExtResource("15_3dxf7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ai05r"]
atlas = ExtResource("15_3dxf7")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hk71u"]
atlas = ExtResource("15_3dxf7")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v36uh"]
atlas = ExtResource("15_3dxf7")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_js3s8"]
atlas = ExtResource("15_3dxf7")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ebm"]
atlas = ExtResource("15_3dxf7")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i646a"]
atlas = ExtResource("15_3dxf7")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4i47"]
atlas = ExtResource("15_3dxf7")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_uvfkc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5atr5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ai05r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hk71u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v36uh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_js3s8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ebm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i646a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4i47")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Base" type="Node2D"]
z_as_relative = false
y_sort_enabled = true
position = Vector2(213, 120)
script = ExtResource("1_6lx40")
teleporterA1 = Vector2i(-2, -1)
teleporterA2 = Vector2i(2, -3)
teleporterActive = true
backgroundMusicTrack = 4

[node name="Ground" type="TileMapLayer" parent="."]
z_as_relative = false
tile_map_data = PackedByteArray("AAD//wAAAAADAAAAAAD/////AAAAAAAAAAD///7/AAADAAAAAAD///3/AAAAAAAAAAD//wEAAAAAAAAAAAD//wIAAAADAAAAAAD//wMAAAADAAAAAAD//wQAAAADAAAAAAAAAAQAAAADAAAAAAAAAAEAAAAAAAAAAAAAAAAAAAADAAAAAAAAAP//AAAAAAAAAAD+//3/AAAAAAAAAAD+//7/AAADAAAAAAD+////AAAFAAAAAAD+/wAAAAADAAAAAAD+/wEAAAACAAAAAAD+/wMAAAAAAAAAAAD+/wIAAAABAAAAAAD+/wQAAAADAAAAAAD9/wQAAAADAAAAAAD9/wMAAAAAAAAAAAD9/wIAAAADAAAAAAD9/wEAAAADAAAAAAD9/wAAAAADAAAAAAD9////AAADAAAAAAD9//7/AAADAAAAAAD9//3/AAAAAAAAAAACAAQAAAADAAAAAAABAAQAAAADAAAAAAABAAMAAAAAAAAAAAABAAIAAAADAAAAAAABAAEAAAADAAAAAAABAAAAAAADAAAAAAABAP//AAADAAAAAAABAP7/AAADAAAAAAABAP3/AAADAAAAAAACAAMAAAAAAAAAAAACAAEAAAAAAAAAAAACAAIAAAAAAAAAAAACAAAAAAAAAAAAAAACAP//AAAAAAAAAAACAP7/AAAAAAAAAAACAP3/AAAFAAAAAAACAPz/AAADAAAAAAABAPz/AAADAAAAAAAAAPz/AAADAAAAAAD///z/AAADAAAAAAD+//z/AAADAAAAAAD9//z/AAADAAAAAAD8//z/AAADAAAAAAD8//3/AAAAAAAAAAD8//7/AAAAAAAAAAD8////AAAAAAAAAAD8/wAAAAAAAAAAAAD8/wEAAAAAAAAAAAD8/wIAAAAAAAAAAAD8/wMAAAAAAAAAAAD8/wQAAAAAAAAAAAADAAIAAAADAAAAAAADAAEAAAADAAAAAAADAAAAAAADAAAAAAADAP//AAADAAAAAAADAPz/AAADAAAAAAADAP3/AAADAAAAAAADAP7/AAADAAAAAAADAAMAAAADAAAAAAADAAQAAAADAAAAAAD7//z/AAADAAAAAAD7//3/AAADAAAAAAD7//7/AAADAAAAAAD7////AAADAAAAAAD7/wAAAAADAAAAAAD7/wEAAAADAAAAAAD7/wIAAAADAAAAAAD7/wMAAAADAAAAAAD7/wQAAAADAAAAAAAAAP3/AAAAAAAAAAAAAP7/AAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAD8/wUAAAAAAAAAAAD7/wUAAAADAAAAAAD7/wYAAAADAAAAAAD8/wYAAAAAAAAAAAD9/wYAAAADAAAAAAD9/wUAAAADAAAAAAD8/wcAAAAAAAAAAAD7/wcAAAADAAAAAAD7/wgAAAADAAAAAAD8/wgAAAADAAAAAAD9/wgAAAADAAAAAAD9/wcAAAADAAAAAAA=")
tile_set = ExtResource("2_fi2or")

[node name="Walls" type="TileMapLayer" parent="."]
z_index = 2
z_as_relative = false
y_sort_enabled = true
tile_map_data = PackedByteArray("AAAAAPz/AAAGAAAAAAAAAP3/AAAGAAAAAAAAAP7/AAAGAAAAAAAAAP//AAAGAAAAAAAAAAAAAAAGAAAAAAAAAAEAAAAGAAAAAAD8////AAAGAAAAAAD8/wAAAAAGAAAAAAD8/wEAAAAGAAAAAAD+/wIAAAAGAAAAAAD8//7/AAAGAAAAAAD8//3/AAAGAAAAAAD9//3/AAAGAAAAAAD+//3/AAAGAAAAAAD9////AAAGAAAAAAD+////AAAGAAAAAAD/////AAAGAAAAAAD+/wEAAAAGAAAAAAA=")
tile_set = ExtResource("2_fi2or")
y_sort_origin = 1

[node name="LevelVictory" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_fwmjb")
volume_db = -24.0

[node name="Door" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_gtjo3")
volume_db = -24.0

[node name="Teleporter" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_8n3if")
volume_db = -16.0

[node name="player" type="Node2D" parent="."]
y_sort_enabled = true
position = Vector2(-64, 16)
script = ExtResource("3_axulg")

[node name="Sprite2D" type="Sprite2D" parent="player"]
z_index = 2
z_as_relative = false
y_sort_enabled = true
position = Vector2(0, -8)
texture = ExtResource("4_elkbb")
hframes = 8
vframes = 8

[node name="Sprite2D3" type="Sprite2D" parent="player"]
self_modulate = Color(1, 1, 1, 0.784314)
z_index = 1
z_as_relative = false
y_sort_enabled = true
position = Vector2(0, -8)
texture = SubResource("AtlasTexture_vw4w1")
offset = Vector2(-16, 16)

[node name="Sprite2D5" type="Sprite2D" parent="player"]
self_modulate = Color(1, 1, 1, 0.784314)
z_index = 1
z_as_relative = false
position = Vector2(0, -8)
texture = SubResource("AtlasTexture_vw4w1")
offset = Vector2(16, 0)

[node name="Sprite2D9" type="Sprite2D" parent="player"]
self_modulate = Color(1, 1, 1, 0.784314)
z_index = 1
z_as_relative = false
position = Vector2(0, -8)
texture = SubResource("AtlasTexture_vw4w1")
offset = Vector2(-16, 0)

[node name="Sprite2D6" type="Sprite2D" parent="player"]
self_modulate = Color(1, 1, 1, 0.784314)
z_index = 1
z_as_relative = false
position = Vector2(0, -8)
texture = SubResource("AtlasTexture_vw4w1")
offset = Vector2(16, 16)

[node name="Sprite2D7" type="Sprite2D" parent="player"]
self_modulate = Color(1, 1, 1, 0.784314)
z_index = 1
z_as_relative = false
position = Vector2(0, -8)
texture = SubResource("AtlasTexture_vw4w1")
offset = Vector2(32, 8)

[node name="Sprite2D8" type="Sprite2D" parent="player"]
self_modulate = Color(1, 1, 1, 0.784314)
z_index = 1
z_as_relative = false
position = Vector2(0, -8)
texture = SubResource("AtlasTexture_vw4w1")
offset = Vector2(-32, 8)

[node name="Sprite2D4" type="Sprite2D" parent="player"]
self_modulate = Color(1, 1, 1, 0.784314)
z_index = 1
z_as_relative = false
position = Vector2(0, -8)
texture = SubResource("AtlasTexture_vw4w1")
offset = Vector2(0, 24)

[node name="Sprite2D10" type="Sprite2D" parent="player"]
self_modulate = Color(1, 1, 1, 0.784314)
z_index = 1
z_as_relative = false
position = Vector2(0, -8)
texture = SubResource("AtlasTexture_vw4w1")
offset = Vector2(0, -8)

[node name="Sprite2D11" type="Sprite2D" parent="player"]
self_modulate = Color(1, 1, 1, 0.392157)
z_index = 1
z_as_relative = false
position = Vector2(0, -8)
texture = SubResource("AtlasTexture_yygo3")
offset = Vector2(0, 8)

[node name="AnimationPlayer" type="AnimationPlayer" parent="player"]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_2h7bs")
}

[node name="Walk" type="AudioStreamPlayer" parent="player"]
stream = ExtResource("9_2ifb8")

[node name="LostLife" type="AudioStreamPlayer" parent="player"]
stream = ExtResource("10_kblny")
volume_db = -24.0

[node name="UI" type="Control" parent="."]
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="dead" type="Label" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "You Died"

[node name="won" type="Label" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "You Won!"

[node name="levelScore" type="Label" parent="UI"]
visible = false
layout_mode = 0
offset_left = -213.0
offset_top = -120.0
offset_right = -173.0
offset_bottom = -97.0
label_settings = SubResource("LabelSettings_orw81")
script = ExtResource("6_5sj0c")

[node name="totalScore" type="Label" parent="UI"]
visible = false
layout_mode = 0
offset_left = -213.0
offset_top = -107.0
offset_right = -173.0
offset_bottom = -84.0
label_settings = SubResource("LabelSettings_bngyr")
script = ExtResource("7_60pqm")

[node name="totalLives" type="Label" parent="UI"]
layout_mode = 0
offset_left = 149.0
offset_top = -120.0
offset_right = 189.0
offset_bottom = -97.0
label_settings = SubResource("LabelSettings_0dkue")
script = ExtResource("14_86hs4")

[node name="enemy_a3" type="Node2D" parent="."]
z_index = 2
z_as_relative = false
y_sort_enabled = true
position = Vector2(-160, 32)
script = ExtResource("14_y8b40")
direction = Vector2i(0, 1)

[node name="nextmove" type="Sprite2D" parent="enemy_a3"]
self_modulate = Color(1, 1, 1, 0.784314)
z_index = 1
z_as_relative = false
y_sort_enabled = true
position = Vector2(16, -15)
texture = SubResource("AtlasTexture_hngt1")
offset = Vector2(-16, 16)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="enemy_a3"]
position = Vector2(4, -15)
sprite_frames = SubResource("SpriteFrames_uvfkc")

[node name="8-bit-adventure" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_cprq6")
volume_db = -24.0

[node name="8-bit-determination" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_n8ujw")
volume_db = -24.0

[node name="8-bit-groove" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_lw1fo")
volume_db = -32.0

[node name="8-bit-menu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_ks0hl")
volume_db = -24.0

[node name="8-bit-mountains-ahead" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_07qev")
volume_db = -32.0

[node name="8-bit-shadows" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_72muw")
volume_db = -32.0

[node name="8-bit-success" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_57bxo")
volume_db = -32.0
